[package]
name = "bevy_heterogeneous_texture_atlas_loader"
version = "0.10.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "texture", "atlas", "sprites", "games"]
categories = ["game-development", "graphics"]
repository = "https://github.com/ickshonpe/bevy_heterogeneous_texture_atlas_loader"
readme = "README.md"
description = "Load heterogenous texture atlases from a ron manifest"

[dependencies]
bevy = { version = "0.9", features = [] }
ron = "0.8.0"
serde = { version = "1.0.145", features = ["derive"] }
anyhow = "1.0.65"
lazy_static = "1.4.0"

[dev-dependencies]
bevy_asset_loader = "0.13.0"